Updated contact info and contact UI slightly.

--- a/contact.html
+++ b/contact.html
@@ -230,9 +230,13 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div class="paragraph" style="text-align:center;"><br /><br /><font size="4">Officer Contact List</font><br /><br /></div>
 
-<div class="paragraph" style="text-align:left;"><br /><ul><li>Cheyenne Moore (President) -&nbsp;cheyenne@utdash.com</li></ul><ul style=""><li style="">Zack Ma (Humanist Outreach Director) -zxm130330@utdallas.edu<span style="font-size:9.0pt;font-family:&quot;Helvetica&quot;,&quot;sans-serif&quot;;
-mso-fareast-font-family:&quot;Times New Roman&quot;;color:black;background:#F6F7F8;
-mso-ansi-language:EN-US;mso-fareast-language:EN-US;mso-bidi-language:AR-SA"></span></li></ul><ul style=""><li style="">Syed Sakib (Vice President) -&nbsp;sss130230@utdallas.edu</li></ul><ul style=""><li style="">Austin Marstaller (Minister of Treasure) -aem130430@utdallas.edu</li></ul><ul style=""><li style="">Caelen (Publicity Director) -cts140130@utdallas.edu</li></ul><ul style=""><li style="">Aaron Anaya (Liaison Coordinator) - aca130130@utdallas.edu</li></ul></div>
+				<div class="paragraph" style="text-align:center"><br />
+					<p style="">President: <a href="mailto:jkb150030@utdallas.edu">Joshua Baker</a></p>
+					<p style="">Vice President: <a href="mailto:asia.jackson@utdallas.edu">Asia Jackson</a></p>
+					<p style="">Media Coordinator: <a href="mailto:mag140730@utdallas.edu">Mitchell Grace</a></p>
+					<p style="">Website Manager: <a href="mailto:jbc140230@utdallas.edu">Jacob Camacho</a></p>
+					<p style="">Faculty Advisor: <a href="https://profiles.utdallas.edu/carlos.aiken">Carlos Aiken</a></p>
+				</div>
 </div>
 </div>
 		</div>
