--- a/index.html
+++ b/index.html
@@ -247,11 +247,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <h2 class="wsite-content-title" style="text-align:left;"><font size="4">Proud affiliates of:</font></h2>
 
 <div><div class="wsite-image wsite-image-border-thin " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
-<a href='http://dfwcor.org/' target='_blank'>
-<img src="uploads/1/0/8/4/10841474/865075266.jpg" alt="Picture" style="width:100%;max-width:1100px" />
-</a>
 <div style="display:block;font-size:90%"></div>
-</div></div>
 
 <div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -10px;">
 	<table class="wsite-multicol-table">
@@ -263,20 +259,13 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div><div class="wsite-image wsite-image-border-thin " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a href='http://www.secularstudents.org/' target='_blank'>
-<img src="uploads/1/0/8/4/10841474/269331548.png" alt="Picture" style="width:100%;max-width:600px" />
+<img src="uploads/1/0/8/4/10841474/269331548.png" alt="Picture" style="max-height: 400px; max-width: 400px" />
 </a>
-<div style="display:block;font-size:90%"></div>
-</div></div>
-
-
-
-				</td>				<td class="wsite-multicol-col" style="width:50%; padding:0 10px;">
-
-
-
+<div style="display:block;font-size:90%"></div></td>
+				<td class="wsite-multicol-col" style="width:50%; padding:0 10px;">
 <div><div class="wsite-image wsite-image-border-thin " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a href='http://www.centerforinquiry.net/' target='_blank'>
-<img src="uploads/1/0/8/4/10841474/997779791.png?86" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/1/0/8/4/10841474/997779791.png?86" alt="Picture" style="max-height: 400px;max-width:400px" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
