Replaced hard coded events with embedded Google Calendar.

--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -222,16 +222,8 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		</div>
 	</div>
 </div>
-<div id="main-wrap">
-	<div id="page">
-		<div id="main">
-			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<h2 class="wsite-content-title" style="text-align:left;"><font size="4">Ten Beautiful Lies About Jesus</font></h2>
-<div class="paragraph" style="text-align:left;display:block;">Friday,&nbsp;October 12<br />6:00pm - 8:00pm<br />Clark Center - CN 1.120<br /><br />For our next meeting, we will a special guest, David Fitzgerald discussing&nbsp;why the &ldquo;Real Jesus&rdquo; of secular historians is just as mythical as the &ldquo;Jesus of Faith.&rdquo;&nbsp;<br /><br /><br />Click <a href="https://www.facebook.com/events/412384102144504/" title="">here</a> for more info<br /><br /><br /></div>
-</div>
-</div>
-		</div>
-	</div>
+<div id="main-wrap" align="center">
+    <iframe src="https://calendar.google.com/calendar/embed?src=sg9qvrc3c774rl92p65qbceig0%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 <div id="footer-wrap">
 	<div id="page">
