--- a/ash-t-shirt-preorder.html
+++ b/ash-t-shirt-preorder.html
@@ -130,7 +130,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 					</li>
 					<li id="pg556864277177963792" class="wsite-menu-item-wrap">
 						<a
-									href="meetings--events.html"
+									href="events.html"
 							class="wsite-menu-item"
 							>
 							Meetings & Events
@@ -318,7 +318,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div>
 <div id="footer-wrap">
 	<div id="page">
-		<div id="footer">Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
+		
 	</div>
 </div>
     <div id="customer-accounts-app"></div>
