--- a/community-involvement.html
+++ b/community-involvement.html
@@ -130,7 +130,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 					</li>
 					<li id="pg556864277177963792" class="wsite-menu-item-wrap">
 						<a
-									href="meetings--events.html"
+									href="events.html"
 							class="wsite-menu-item"
 							>
 							Meetings & Events
@@ -226,11 +226,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 	<div id="page">
 		<div id="main">
 			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<div class="paragraph" style="text-align:left;">This page will contain information regarding our volunteer service!<br /><br />Here is the link to download the volunteer release form regarding our monthly involvement with the Texas Tree's Foundation<br /><br /></div>
-
-<div><div style="margin: 10px 0 0 -10px">
-<a title="Download file: volunteer_release_form.docx" download href="uploads/1/0/8/4/10841474/volunteer_release_form.docx"><img src="http://www.weebly.com/weebly/images/file_icons/rtf.png" width="36" height="36" style="float: left; position: relative; left: 0px; top: 0px; margin: 0 15px 15px 0; border: 0;" /></a><div style="float: left; text-align: left; position: relative;"><table style="font-size: 12px; font-family: tahoma; line-height: .9;"><tr><td colspan="2"><b> volunteer_release_form.docx</b></td></tr><tr style="display: none;"><td>File Size:  </td><td>17 kb</td></tr><tr style="display: none;"><td>File Type:  </td><td> docx</td></tr></table><a title="Download file: volunteer_release_form.docx" download href="uploads/1/0/8/4/10841474/volunteer_release_form.docx" style="font-weight: bold;">Download File</a></div>
-</div>
+	<div class="paragraph" style="text-align:left;">This page will contain information regarding our volunteer service!<br />
 
 <hr style="clear: both; width: 100%; visibility: hidden"></hr></div>
 </div>
@@ -240,7 +236,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div>
 <div id="footer-wrap">
 	<div id="page">
-		<div id="footer">Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
+
 	</div>
 </div>
     <div id="customer-accounts-app"></div>
