--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 					</li>
 					<li id="pg556864277177963792" class="wsite-menu-item-wrap">
 						<a
-									href="meetings--events.html"
+									href="events.html"
 							class="wsite-menu-item"
 							>
 							Meetings & Events
@@ -278,7 +278,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div></div></div>
 
 <div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
-<hr class="styled-hr" style="width:100%;"></hr>
+<hr class="styled-hr" style="width:100%;">
 <div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
 
 <div class="paragraph" style="text-align:left;"><font size="1">The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University.</font>&nbsp;<br /></div>
@@ -287,14 +287,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		</div>
 	</div>
 </div>
-<div id="footer-wrap">
-	<div id="page">
-		<div id="footer">Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
 	</div>
 </div>
-    <div id="customer-accounts-app"></div>
-    <script src="http://cdn2.editmysite.com/js/site/main-customer-accounts-site.js?buildTime=1234"></script>
-
-		
 	</body>
 </html>
