Worked on code formatting and styling of Home page nav bar.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head><script src="/gdpr/gdprscript.js?buildTime=1234&hasRemindMe=true&stealth=false"></script>
 		<title>Home</title>
 <meta name="description" content="Atheist club at the University of Texas at Dallas" />
-<meta name="keywords" content="atheist, skeptic, secular, humanist, atheism, UTD, university of texas at dallas, dallas, texas, atheists, college, agnostic, skeptics, humanists, UTDallas, atheist club," />
+<meta name="keywords" content="atheist, skeptic, secular, humanist, atheism, UTD, university of texas at dallas, dallas, texas, atheists, college, agnostic, skeptics, humanists, UTDallas, UTD, atheist club," />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 		
-		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
+<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
 <link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/old/fancybox.css?1234" />
 <link rel="stylesheet" type="text/css" href="files/main_style.css?1539102259" title="wsite-theme-css" />
 <link href='http://fonts.googleapis.com/css?family=Play:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
@@ -115,78 +115,51 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 
 	</head>
-	<body class=" tall-header-page wsite-theme-dark  wsite-page-index"><div id="nav-wrap">
-	<div id="page">
-		<div id="topnav">
-			<ul class="wsite-menu-default">
-					<li id="active" class="wsite-menu-item-wrap">
-						<a
-									href="index.html"
-							class="wsite-menu-item"
-							>
-							Home
-						</a>
-
-					</li>
-					<li id="pg556864277177963792" class="wsite-menu-item-wrap">
-						<a
-									href="events.html"
-							class="wsite-menu-item"
-							>
-							Meetings & Events
-						</a>
-
-					</li>
-					<li id="pg288667748810936401" class="wsite-menu-item-wrap">
-						<a
-									href="past-events.html"
-							class="wsite-menu-item"
-							>
-							Past Events
-						</a>
-
-					</li>
-					<li id="pg181312439582571719" class="wsite-menu-item-wrap">
-						<a
-									href="about-us.html"
-							class="wsite-menu-item"
-							>
-							About Us
-						</a>
-
-					</li>
-					<li id="pg516200200827358231" class="wsite-menu-item-wrap">
-						<a
-									href="contact.html"
-							class="wsite-menu-item"
-							>
-							Contact
-						</a>
-
-					</li>
-					<li id="pg100042852710769492" class="wsite-menu-item-wrap">
-						<a
-									href="officer-application.html"
-							class="wsite-menu-item"
-							>
-							Officer Application
-						</a>
-
-					</li>
-					<li id="pg263425732847507164" class="wsite-menu-item-wrap">
-						<a
-									href="community-involvement.html"
-							class="wsite-menu-item"
-							>
-							Community Involvement
-						</a>
-
-					</li>
-			</ul>
-			<div style="clear:both"></div>
+	<body class=" tall-header-page wsite-theme-dark  wsite-page-index">
+	<div id="nav-wrap">
+		<div id="page">
+			<div id="topnav">
+				<ul class="wsite-menu-default" style="display: inline-block;">
+						<li id="active" class="wsite-menu-item-wrap">
+							<a href="index.html" class="wsite-menu-item">
+								Home
+							</a>
+						</li>
+						<li id="pg556864277177963792" class="wsite-menu-item-wrap">
+							<a href="events.html" class="wsite-menu-item">
+								Meetings & Events
+							</a>
+						</li>
+						<li id="pg288667748810936401" class="wsite-menu-item-wrap">
+							<a href="past-events.html" class="wsite-menu-item">
+								Past Events
+							</a>
+						</li>
+						<li id="pg181312439582571719" class="wsite-menu-item-wrap">
+							<a href="about-us.html" class="wsite-menu-item">
+								About Us
+							</a>
+						</li>
+						<li id="pg516200200827358231" class="wsite-menu-item-wrap">
+							<a href="contact.html" class="wsite-menu-item">
+								Contact
+							</a>
+						</li>
+						<li id="pg100042852710769492" class="wsite-menu-item-wrap">
+							<a href="officer-application.html" class="wsite-menu-item">
+								Officer Application
+							</a>
+						</li>
+						<!--<li id="pg263425732847507164" class="wsite-menu-item-wrap">
+							<a href="community-involvement.html" class="wsite-menu-item">
+								Community Involvement
+							</a>
+						</li>-->
+				</ul>
+				<div style="clear:both"></div>
+			</div>
 		</div>
 	</div>
-</div>
 <div id="header-wrap">
 	<div id="page">
 		<table id="header">
