--- a/events.html
+++ b/events.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script src="/gdpr/gdprscript.js?buildTime=1234&hasRemindMe=true&stealth=false"></script>
+
+<head>
 	<title>Upcoming Events</title>
 
-
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 	<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
 	<link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/old/fancybox.css?1234" />
@@ -13,228 +12,118 @@
 	<link href='http://fonts.googleapis.com/css?family=Play:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 
 	<style type='text/css'>
-		.wsite-elements.wsite-not-footer:not(.wsite-header-elements) div.paragraph, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) p, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-block .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-description, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-		#wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-		.wsite-elements.wsite-footer div.paragraph, .wsite-elements.wsite-footer p, .wsite-elements.wsite-footer .product-block .product-title, .wsite-elements.wsite-footer .product-description, .wsite-elements.wsite-footer .wsite-form-field label, .wsite-elements.wsite-footer .wsite-form-field label{}
-		.wsite-elements.wsite-not-footer:not(.wsite-header-elements) h2, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-long .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-large .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-small .product-title, #wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-		#wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-		.wsite-elements.wsite-footer h2, .wsite-elements.wsite-footer .product-long .product-title, .wsite-elements.wsite-footer .product-large .product-title, .wsite-elements.wsite-footer .product-small .product-title{}
-		#wsite-title {}
-		.wsite-menu-default a {}
-		.wsite-menu a {}
-		.wsite-image div, .wsite-caption {}
-		.galleryCaptionInnerText {}
-		.fancybox-title {}
-		.wslide-caption-text {}
-		.wsite-phone {}
-		.wsite-headline,.wsite-header-section .wsite-content-title {}
-		.wsite-headline-paragraph,.wsite-header-section .paragraph {}
-		.wsite-button-inner {}
-		.wsite-not-footer blockquote {}
-		.wsite-footer blockquote {}
-		.blog-header h2 a {}
-		#wsite-content h2.wsite-product-title {}
-		.wsite-product .wsite-product-price a {}
-		@media screen and (min-width: 767px) {.wsite-elements.wsite-not-footer:not(.wsite-header-elements) div.paragraph, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) p, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-block .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-description, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-			#wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-			.wsite-elements.wsite-footer div.paragraph, .wsite-elements.wsite-footer p, .wsite-elements.wsite-footer .product-block .product-title, .wsite-elements.wsite-footer .product-description, .wsite-elements.wsite-footer .wsite-form-field label, .wsite-elements.wsite-footer .wsite-form-field label{}
-			.wsite-elements.wsite-not-footer:not(.wsite-header-elements) h2, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-long .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-large .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-small .product-title, #wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-			#wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-			.wsite-elements.wsite-footer h2, .wsite-elements.wsite-footer .product-long .product-title, .wsite-elements.wsite-footer .product-large .product-title, .wsite-elements.wsite-footer .product-small .product-title{}
-			#wsite-title {}
-			.wsite-menu-default a {}
-			.wsite-menu a {}
-			.wsite-image div, .wsite-caption {}
-			.galleryCaptionInnerText {}
-			.fancybox-title {}
-			.wslide-caption-text {}
-			.wsite-phone {}
-			.wsite-headline,.wsite-header-section .wsite-content-title {}
-			.wsite-headline-paragraph,.wsite-header-section .paragraph {}
-			.wsite-button-inner {}
-			.wsite-not-footer blockquote {}
-			.wsite-footer blockquote {}
-			.blog-header h2 a {}
-			#wsite-content h2.wsite-product-title {}
-			.wsite-product .wsite-product-price a {}
-		}</style>
-
-	<style type='text/css'>
 		.wsite-header {
 			background-image: url(uploads/1/0/8/4/10841474/header_images/1422576020.jpg) !important;
 			background-position: 0 0 !important;
 		}
 	</style>
-
-	<script>
-        var STATIC_BASE = '//cdn1.editmysite.com/';
-        var ASSETS_BASE = '//cdn2.editmysite.com/';
-        var STYLE_PREFIX = 'wsite';
-	</script>
-	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
-
-	<script type="text/javascript" src="http://cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1234&"></script>
-	<script src="http://cdn2.editmysite.com/js/site/main.js?buildTime=1234"></script><script type="text/javascript">
-        function initCustomerAccountsModels() {
-            (function(){_W.setup_rpc({"url":"\/ajax\/api\/JsonRPC\/CustomerAccounts\/","actions":{"CustomerAccounts":[{"name":"login","len":2,"multiple":false,"standalone":false},{"name":"logout","len":0,"multiple":false,"standalone":false},{"name":"getSessionDetails","len":0,"multiple":false,"standalone":false},{"name":"getAccountDetails","len":0,"multiple":false,"standalone":false},{"name":"getOrders","len":0,"multiple":false,"standalone":false},{"name":"register","len":4,"multiple":false,"standalone":false},{"name":"emailExists","len":1,"multiple":false,"standalone":false},{"name":"passwordReset","len":1,"multiple":false,"standalone":false},{"name":"passwordUpdate","len":3,"multiple":false,"standalone":false},{"name":"validateSession","len":1,"multiple":false,"standalone":false}]},"namespace":"_W.CustomerAccounts.RPC"});
-                _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":"_W.CustomerAccounts.BackboneModelData","collection_namespace":"_W.CustomerAccounts.BackboneCollectionData","bootstrap_namespace":"_W.CustomerAccounts.BackboneBootstrap","models":{"CustomerAccounts":{"_class":"CustomerAccounts.Model.CustomerAccounts","defaults":null,"validation":null,"types":null,"idAttribute":null,"keydefs":null}},"collections":{"CustomerAccounts":{"_class":"CustomerAccounts.Collection.CustomerAccounts"}},"bootstrap":[]});
-            })();
-        }
-        if(document.createEvent && document.addEventListener) {
-            var initEvt = document.createEvent('Event');
-            initEvt.initEvent('customerAccountsModelsInitialized', true, false);
-            document.dispatchEvent(initEvt);
-        } else if(document.documentElement.initCustomerAccountsModels === 0){
-            document.documentElement.initCustomerAccountsModels++
-        }
-	</script>
-	<script type="text/javascript"> _W = _W || {}; _W.securePrefix='UNSET'; </script><script>_W = _W || {};
-    _W.customerLocale = "en_US";
-    _W.storeName = null;
-    _W.storeCountry = "US";
-    _W.storeCurrency = "USD";
-    _W.storeEuPrivacyPolicyUrl = "";
-    com_currentSite = "726348811835363221";
-    com_userID = "10841474";</script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
-	<script type="text/javascript" src="http://cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1234&"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "https://www.google.com/recaptcha/api.js"; </script><script type="text/javascript"> window._W = window._W || {}; _W.showV2Footer = 1; </script><script type="text/javascript"><!--
-    var IS_ARCHIVE = 1;
-
-    function initFlyouts(){
-        initPublishedFlyoutMenus(
-            [{"id":"630128377690782098","title":"Home","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"556864277177963792","title":"Meetings & Events","url":"meetings--events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"288667748810936401","title":"Past Events","url":"past-events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"181312439582571719","title":"About Us","url":"about-us.html","target":"","nav_menu":false,"nonclickable":false},{"id":"516200200827358231","title":"Contact","url":"contact.html","target":"","nav_menu":false,"nonclickable":false},{"id":"100042852710769492","title":"Officer Application","url":"officer-application.html","target":"","nav_menu":false,"nonclickable":false},{"id":"263425732847507164","title":"Community Involvement","url":"community-involvement.html","target":"","nav_menu":false,"nonclickable":false}],
-            "659480519458831674",
-            '',
-            'active',
-            false,
-            {"navigation\/item":"<li {{#id}}id=\"{{id}}\"{{\/id}} class=\"wsite-menu-item-wrap\">\n\t<a\n\t\t{{^nonclickable}}\n\t\t\t{{^nav_menu}}\n\t\t\t\thref=\"{{url}}\"\n\t\t\t{{\/nav_menu}}\n\t\t{{\/nonclickable}}\n\t\t{{#target}}\n\t\t\ttarget=\"{{target}}\"\n\t\t{{\/target}}\n\t\t{{#membership_required}}\n\t\t\tdata-membership-required=\"{{.}}\"\n\t\t{{\/membership_required}}\n\t\tclass=\"wsite-menu-item\"\n\t\t>\n\t\t{{{title_html}}}\n\t<\/a>\n\t{{#has_children}}{{> navigation\/flyout\/list}}{{\/has_children}}\n<\/li>\n","navigation\/flyout\/list":"<div class=\"wsite-menu-wrap\" style=\"display:none\">\n\t<ul class=\"wsite-menu\">\n\t\t{{#children}}{{> navigation\/flyout\/item}}{{\/children}}\n\t<\/ul>\n<\/div>\n","navigation\/flyout\/item":"<li {{#id}}id=\"{{id}}\"{{\/id}}\n\tclass=\"wsite-menu-subitem-wrap {{#is_current}}wsite-nav-current{{\/is_current}}\"\n\t>\n\t<a\n\t\t{{^nonclickable}}\n\t\t\t{{^nav_menu}}\n\t\t\t\thref=\"{{url}}\"\n\t\t\t{{\/nav_menu}}\n\t\t{{\/nonclickable}}\n\t\t{{#target}}\n\t\t\ttarget=\"{{target}}\"\n\t\t{{\/target}}\n\t\tclass=\"wsite-menu-subitem\"\n\t\t>\n\t\t<span class=\"wsite-menu-title\">\n\t\t\t{{{title_html}}}\n\t\t<\/span>{{#has_children}}<span class=\"wsite-menu-arrow\">&gt;<\/span>{{\/has_children}}\n\t<\/a>\n\t{{#has_children}}{{> navigation\/flyout\/list}}{{\/has_children}}\n<\/li>\n"},
-            {}
-        )
-    }
-    //-->
-	</script>
-
-
 </head>
+
 <body class=" tall-header-page wsite-theme-dark  wsite-page-upcoming-events">
-<div id="nav-wrap">
-	<div id="page">
-		<div id="topnav">
-			<ul class="wsite-menu-default">
-				<li id="pg630128377690782098" class="wsite-menu-item-wrap">
-					<a
-							href="index.html"
-							class="wsite-menu-item"
-					>
-						Home
-					</a>
+	<div id="nav-wrap">
+		<div id="page">
+			<div id="topnav">
+				<ul class="wsite-menu-default">
+					<li id="pg630128377690782098" class="wsite-menu-item-wrap">
+						<a href="index.html" class="wsite-menu-item">
+							Home
+						</a>
 
-				</li>
-				<li id="pg556864277177963792" class="wsite-menu-item-wrap">
-					<a
-							href="events.html"
-							class="wsite-menu-item"
-					>
-						Meetings & Events
-					</a>
+					</li>
+					<li id="pg556864277177963792" class="wsite-menu-item-wrap">
+						<a href="events.html" class="wsite-menu-item">
+							Meetings & Events
+						</a>
 
-				</li>
-				<li id="pg288667748810936401" class="wsite-menu-item-wrap">
-					<a
-							href="past-events.html"
-							class="wsite-menu-item"
-					>
-						Past Events
-					</a>
+					</li>
+					<li id="pg288667748810936401" class="wsite-menu-item-wrap">
+						<a href="past-events.html" class="wsite-menu-item">
+							Past Events
+						</a>
 
-				</li>
-				<li id="pg181312439582571719" class="wsite-menu-item-wrap">
-					<a
-							href="about-us.html"
-							class="wsite-menu-item"
-					>
-						About Us
-					</a>
+					</li>
+					<li id="pg181312439582571719" class="wsite-menu-item-wrap">
+						<a href="about-us.html" class="wsite-menu-item">
+							About Us
+						</a>
 
-				</li>
-				<li id="pg516200200827358231" class="wsite-menu-item-wrap">
-					<a
-							href="contact.html"
-							class="wsite-menu-item"
-					>
-						Contact
-					</a>
+					</li>
+					<li id="pg516200200827358231" class="wsite-menu-item-wrap">
+						<a href="contact.html" class="wsite-menu-item">
+							Contact
+						</a>
 
-				</li>
-				<li id="pg100042852710769492" class="wsite-menu-item-wrap">
-					<a
-							href="officer-application.html"
-							class="wsite-menu-item"
-					>
-						Officer Application
-					</a>
+					</li>
+					<li id="pg100042852710769492" class="wsite-menu-item-wrap">
+						<a href="officer-application.html" class="wsite-menu-item">
+							Officer Application
+						</a>
 
-				</li>
-				<li id="pg263425732847507164" class="wsite-menu-item-wrap">
-					<a
-							href="community-involvement.html"
-							class="wsite-menu-item"
-					>
-						Community Involvement
-					</a>
+					</li>
+					<li id="pg263425732847507164" class="wsite-menu-item-wrap">
+						<a href="community-involvement.html" class="wsite-menu-item">
+							Community Involvement
+						</a>
 
-				</li>
-			</ul>
-			<div style="clear:both"></div>
-		</div>
-	</div>
-</div>
-<div id="header-wrap">
-	<div id="page">
-		<table id="header">
-			<tr>
-				<td id="logo"><span class="wsite-logo">
-
-
-        <span class="wsite-title-placeholder">&nbsp;</span><span style="display:none">
-        <span style="display:none">Atheists, Skeptics & Humanists at UT Dallas</span>
-        </span>
-
-
-    </span></td>
-				<td id="header-right">
-					<table>
-						<tr>
-							<td class="phone-number"></td>
-							<td class="social"></td>
-							<td class="search"></td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
-	</div>
-</div>
-<div id="banner-wrap" class="wsite-background">
-	<div id="page">
-		<div id="banner">
-			<div id="banner-inner">
-				<div class="wsite-header"></div>
+					</li>
+				</ul>
+				<div style="clear:both"></div>
 			</div>
 		</div>
 	</div>
-</div>
-<h2 class="wsite-content-title" style="text-align:center; color:white">Meeting Time</h2>
-<div class="paragraph" style="text-align:center;display:block;">
-    Check out our <i><b>public</b></i> <a href="https://www.facebook.com/utdash" target="_blank"><u>Facebook page</u></a> or our <i><b>private</b></i> <a href="https://www.facebook.com/groups/utdash" target="_blank"><u>Facebook group</u></a> for the most up-to-date meeting locations.
-	For the Fall 2018 semester, we meet in <a href="https://www.utdallas.edu/locator/SSA_14.510" target="_blank">SSA 14.510</a> from 6:00 - 8:00PM.
-	Join us afterwards for dinner!
-    <br><br><br>
-    <hr class="styled-hr" style="width:100%;">
-</div>
-<div class="paragraph" style="text-align:center;display:block;">
-	<iframe src="https://calendar.google.com/calendar/embed?src=sg9qvrc3c774rl92p65qbceig0%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-</div>
-<div style="height: 20px; overflow: hidden; width: 100%;"><hr class="styled-hr" style="width:100%;"></div>
-<div class="paragraph" style="text-align:left;"><font size="1">The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University.</font>&nbsp;<br /></div>
+	<div id="header-wrap">
+		<div id="page">
+			<table id="header">
+				<tr>
+					<td id="logo">
+						<span class="wsite-logo">
+							<span class="wsite-title-placeholder">&nbsp;</span><span style="display:none">
+								<span style="display:none">Atheists, Skeptics & Humanists at UT Dallas</span>
+							</span>
+						</span>
+					</td>
+					<td id="header-right">
+						<table>
+							<tr>
+								<td class="phone-number"></td>
+								<td class="social"></td>
+								<td class="search"></td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div id="banner-wrap" class="wsite-background">
+		<div id="page">
+			<div id="banner">
+				<div id="banner-inner">
+					<div class="wsite-header"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<h2 class="wsite-content-title" style="text-align:center; color:white">Meeting Time</h2>
+	<div class="paragraph" style="text-align:center;display:block;">
+		Check out our <i><b>public</b></i> <a href="https://www.facebook.com/utdash"><u>Facebook page</u></a>
+		or our <i><b>private</b></i> <a href="https://www.facebook.com/groups/utdash"><u>Facebook group</u></a>
+		for the most up-to-date meeting locations.
+		For the Fall 2018 semester, we meet in <a href="https://www.utdallas.edu/locator/SSA_14.510">SSA
+			14.510</a> from 6:00 - 8:00PM.
+		Join us afterwards for dinner!
+		<br><br><br>
+		<hr class="styled-hr" style="width:100%;">
+	</div>
+	<div class="paragraph" style="text-align:center;display:block;">
+		<iframe src="https://calendar.google.com/calendar/embed?src=sg9qvrc3c774rl92p65qbceig0%40group.calendar.google.com&ctz=America%2FChicago"
+		 style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	</div>
+	<div class="paragraph" style="text-align:center;">
+		The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
+		organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the
+		university or its officers. The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University.
+	</div>
 </body>
+
 </html>
