Tweaked contact.html

--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 						<div class="paragraph" style="text-align:center"><br />
 							<p>President: <a href="mailto:joshua@utdash.com">Joshua Baker</a></p>
 							<p>Vice President: <a href="mailto:asia@utdash.com">Asia Jackson</a></p>
-							<p>Media Coordinator: <a href="mailto:mitch@utdash.com">Mitchell Grace</a></p>
+							<p>Media Coordinator: <a href="mailto:mitch@utdash.com">Mitch Grace</a></p>
 							<p>Website Manager: <a href="mailto:jacob@utdash.com">Jacob Camacho</a></p>
 							<p>Faculty Advisor: <a href="https://profiles.utdallas.edu/carlos.aiken">Carlos Aiken</a></p>
 						</div>
@@ -136,8 +136,7 @@
 			</div>
 		</div>
 	</div>
-	<hr class="styled-hr" style="width:100%;">
-	</div>
+
 	<div class="paragraph" style="text-align:center;">
 		The ASH Website is published by Atheists, Skeptics, and Humanists at UT Dallas, a registered student
 		organization. The ASH Website is not an official publication of UT Dallas and does not represent the views of the
