Added improved ASH Header

--- a/officer-application.html
+++ b/officer-application.html
@@ -13,7 +13,7 @@
 
 	<style type='text/css'>
 		.wsite-header {
-			background-image: url(uploads/1/0/8/4/10841474/header_images/1422576020.jpg) !important;
+			background-image: url(uploads/1/0/8/4/10841474/header_images/ASH_black_top.jpg) !important;
 			background-position: 0 0 !important;
 		}
 	</style>
@@ -60,12 +60,13 @@
 						</a>
 
 					</li>
+                    <!--
 					<li id="pg263425732847507164" class="wsite-menu-item-wrap">
 						<a href="community-involvement.html" class="wsite-menu-item">
 							Community Involvement
 						</a>
-
 					</li>
+					-->
 				</ul>
 				<div style="clear:both"></div>
 			</div>
@@ -110,8 +111,12 @@
 				<div id="content">
 					<div id="wsite-content" class="wsite-elements wsite-not-footer">
 						<h2 class="wsite-content-title" style="text-align:left;">
-							A.S.H. is no longer taking officer applications for the
-							Fall 2018 semester.
+							Officer Applications
+                        </h2>
+                        <p>
+                            A.S.H. is no longer taking officer applications for the
+                            Fall 2018 semester.
+                        </p>
 					</div>
 				</div>
 			</div>
