--- a/events.html
+++ b/events.html
@@ -1,20 +1,23 @@
 ---
 title: Upcoming Events
 layout: default
+scripts:
+  - jquery-3.3.1.min.js
+  - eventLoader.js
 ---
 
-<h2 class="wsite-content-title" style="text-align:center; color:white">Meeting Time</h2>
+<h2 class="wsite-content-title" style="text-align:center; color:white">Upcoming ASH Meetings and Events</h2>
 <div class="paragraph" style="text-align:center;display:block;">
 	Check out our <i><b>public</b></i> <a href="https://www.facebook.com/utdash"><u>Facebook page</u></a>
 	or our <i><b>private</b></i> <a href="https://www.facebook.com/groups/utdash"><u>Facebook group</u></a>
-	for the most up-to-date meeting locations.
-	For the Fall 2018 semester, we meet in <a href="https://www.utdallas.edu/locator/SSA_14.510">SSA
-		14.510</a> from 6:00 - 8:00PM.
-	Join us afterwards for dinner!
+	to RSVP for upcoming events!
+	<br><br><br>
+	Click <a target="_blank" href="https://calendar.google.com/calendar/embed?src=sg9qvrc3c774rl92p65qbceig0%40group.calendar.google.com&ctz=America%2FChicago">
+		here
+	</a> to add our events to your Google Calendar!
 	<br><br><br>
 	<hr class="styled-hr" style="width:100%;">
 </div>
-<div class="paragraph" style="text-align:center;display:block;">
-	<iframe src="https://calendar.google.com/calendar/embed?src=sg9qvrc3c774rl92p65qbceig0%40group.calendar.google.com&ctz=America%2FChicago"
-		style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<div id="eventsContainer" style="display:block">
+	Events are supposed to show up here. Either JavaScript is disabled, or an error occurred.
 </div>
