I fixed the oxford comma / ampersand situation.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 					Alliance</a></em></strong></div>
 
 	<div class="paragraph" style="text-align:left;"><br />
-		<font size="3">Welcome to the official page of <strong>Atheists, Skeptics, &amp; Humanists at UT Dallas</strong>,
+		<font size="3">Welcome to the official page of <strong>Atheists, Skeptics, and Humanists at UT Dallas</strong>,
 			&nbsp;also known as <strong>ASH</strong>.</font><br /><br />
 		<font size="3">We meet every Friday night at 6pm in the SSA 14.510 room. Come join us for presentations,
 			discussions, games, and more! After every meeting we have dinner at various restaurants.</font><br />
