Updated the officer list on contact.html. Added a serveLocal.bat file to launch Jekyll on Windows. Took Jacob Camacho off the footer thing that says "domain maintained by".
Soon we need to Jekyllify this repo. Right now there are files kept in
_site which should not be there. After those files have been moved to
the right place, run `git rm -r --cached .`.

--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,11 @@ layout: addedCSS
 					<div class="paragraph" style="text-align:center"><br />
 						<p>President: <a href="mailto:joshua@utdash.com">Joshua Baker</a></p>
 						<p>Vice President: <a href="mailto:asia@utdash.com">Asia Jackson</a></p>
-						<p>Media Coordinator: <a href="mailto:mitch@utdash.com">Mitch Grace</a></p>
-						<p>Website Manager: <a href="mailto:jacob@utdash.com">Jacob Camacho</a></p>
-						<p>Faculty Advisor: <a href="https://profiles.utdallas.edu/carlos.aiken">Carlos Aiken</a></p>
+						<p>Secretary: <a href="mailto:rachel@utdash.com">Rachel Calderon</a></p>
+						<p>Treasurer: <a href="mailto:maia@utdash.com">Maia Mott</a></p>
+						<p>Marketing coordinator: <a href="mailto:jack@utdash.com">Jack Greuel</a></p>
+						<p>Meeting coordinator: <a href="mailto:ben@utdash.com">Ben Kocsis</a></p>
+						<p>Faculty Advisor: <a href="https://www.utdallas.edu/ah/people/faculty_detail.php?faculty_id=1681">Dr. Lawrence Amato</a></p>
 					</div>
 				</div>
 			</div>
