Added permalinks to the html files so that the URLs are cleaner.
Rescued serveLocal.sh from git history oblivion.

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 title: Contact
 layout: addedCSS
+permalink: /contact
 ---
 <div id="main-wrap" style="display: block; overflow: hidden;">
 	<div id="page">
