--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,7 @@
 ---
 title: About Us
 layout: addedCSS
+permalink: /about-us
 ---
 		
 <div id="main-wrap" style="display: block; overflow: hidden;">
