Moved some images to /assets/images
Deleted some images from /assets/photos that should not have been there.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 		
 <div id="header">
-	<img src="uploads/header_images/headerHD.png" alt="header" />
+	<img src="assets/images/headerHD.png" alt="header" />
 </div>
 
 	<div id="main-wrap" style="display: block; overflow: hidden; border-top: 1px solid #2f2f2f;">
@@ -30,7 +30,7 @@ permalink: /
 					<div class="facebook-icon" style="text-align: left">
 							<div class="wsite-image wsite-image-border-none ">
 								<a href='https://facebook.com/utdash'>
-									<img src="uploads/fb-icon.jpg" alt="ASH Facebook"/>
+									<img src="assets/images/fb-icon.jpg" alt="ASH Facebook"/>
 								</a>
 							</div>
 					</div>
@@ -43,6 +43,6 @@ permalink: /
 	<div style="clear:both"></div>
 	
 	<div id="main-content-img">
-		<img src="uploads/display-img.jpg" alt="ASH Group Photo"/>
+		<img src="assets/images/display-img.jpg" alt="ASH Group Photo"/>
 	</div>
 	
