Renamed addedCSS.html layout to default.html because it's the only one being used.

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 title: Contact
-layout: addedCSS
+layout: default
 permalink: /contact
 ---
 <div id="main-wrap" style="display: block; overflow: hidden;">
