--- a/mailingList.html
+++ b/mailingList.html
@@ -1,6 +1,6 @@
 ---
 title: General Mailing List
-layout: addedCSS
+layout: default
 permalink: /mailing-list
 ---
 <div id="main-wrap" style="display: block; overflow: hidden;">
