--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
 	<img src="assets/images/headerHD.png" alt="header" />
 </div>
 
-	<div id="main-wrap" style="display: block; overflow: hidden; border-top: 1px solid #2f2f2f;">
+	<div id="main-wrap" style="display: block; overflow: hidden; border-top: 1px solid #a10608;">
 		<div id="page">
 			<div id="main">
 				<div id="content">
